// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`activation order > in production, when the core has to be downloaded first 1`] = `
[
  "--- activate ---",
  "window.createOutputChannel("Language Check")",
  "languages.createDiagnosticCollection("language-check")",
  "window.showInformationMessage("Welcome to Language Check! Open the Get Started walkthrough to learn the basics.", "Open Walkthrough")",
  "workspace.onDidOpenTextDocument(function)",
  "window.createOutputChannel("Language Check: Protobuf Trace")",
  "window.createTextEditorDecorationType(object)",
  "window.createTextEditorDecorationType(object)",
  "window.createTextEditorDecorationType(object)",
  "window.createTextEditorDecorationType(object)",
  "languages.createDiagnosticCollection("language-check-config")",
  "workspace.onDidChangeTextDocument(function)",
  "workspace.onDidOpenTextDocument(function)",
  "workspace.onDidSaveTextDocument(function)",
  "window.onDidChangeVisibleTextEditors(function)",
  "workspace.onDidCloseTextDocument(function)",
  "commands.registerCommand("language-check.configStatus", function)",
  "window.withProgress(object)",
  "--- first yield ---",
  "window.createStatusBarItem(number, number)",
  "window.createStatusBarItem(number, number)",
  "window.onDidChangeActiveTextEditor(function)",
  "languages.registerInlayHintsProvider([markdown,html,latex,forester,tinylang,rst,sweave,bibtex,org,typst,mdx,xhtml], object)",
  "languages.registerInlayHintsProvider([latex], object)",
  "languages.registerInlayHintsProvider([latex], object)",
  "languages.registerInlineCompletionItemProvider([markdown,html,latex,forester,tinylang,rst,sweave,bibtex,org,typst,mdx,xhtml], object)",
  "languages.registerCodeActionsProvider([markdown,html,latex,forester,tinylang,rst,sweave,bibtex,org,typst,mdx,xhtml], object)",
  "commands.registerCommand("language-check.downloadBinary", function)",
  "commands.registerCommand("language-check.toggleInlayHints", function)",
  "commands.registerCommand("language-check.toggleCheckTrigger", function)",
  "commands.registerCommand("language-check.managePlugins", function)",
  "commands.registerCommand("language-check.restartLanguageServer", function)",
  "commands.registerCommand("language-check.restartLTDocker", function)",
  "commands.registerCommand("language-check.ignoreDiagnostic", function)",
  "commands.registerCommand("language-check.ignoreSelection", function)",
  "commands.registerCommand("language-check.fixAllSpellingInFile", function)",
  "commands.registerCommand("language-check.fixAllSpellingInWorkspace", function)",
  "commands.registerCommand("language-check.toggleTrace", function)",
  "commands.registerCommand("language-check.showTrace", function)",
  "commands.registerCommand("language-check.switchCore", function)",
  "commands.registerCommand("language-check.installPack", function)",
  "commands.registerCommand("language-check.addToDictionary", function)",
  "commands.registerCommand("language-check.deactivateRule", function)",
  "commands.registerCommand("language-check.applyFix", function)",
  "commands.registerCommand("language-check.selectLanguage", function)",
  "commands.registerCommand("language-check.manageEngines", function)",
  "commands.registerCommand("language-check.skipLatexEnv", function)",
  "commands.registerCommand("language-check.hideLatexEnvHint", function)",
  "commands.registerCommand("language-check.skipLatexCommand", function)",
  "commands.registerCommand("language-check.checkDocument", function)",
  "commands.registerCommand("language-check.checkWorkspace", function)",
  "commands.registerCommand("language-check.openSpeedFix", function)",
  "commands.registerCommand("language-check.openInspector", function)",
  "window.onDidChangeActiveTextEditor(function)",
  "workspace.onDidOpenTextDocument(function)",
  "window.onDidChangeActiveTextEditor(function)",
  "workspace.onDidChangeTextDocument(function)",
  "workspace.onDidSaveTextDocument(function)",
  "workspace.onDidChangeConfiguration(function)",
  "workspace.createFileSystemWatcher("**/.languagecheck.{yaml,yml,json}")",
  "workspace.createFileSystemWatcher.onDidChange()",
  "workspace.createFileSystemWatcher.onDidCreate()",
  "workspace.createFileSystemWatcher.onDidDelete()",
  "workspace.createFileSystemWatcher(RelativePattern(".langcheck/schemas/**/*"))",
  "workspace.createFileSystemWatcher.onDidChange()",
  "workspace.createFileSystemWatcher.onDidCreate()",
  "workspace.createFileSystemWatcher.onDidDelete()",
  "workspace.createFileSystemWatcher(RelativePattern(".languagecheck/dictionary.txt"))",
  "workspace.createFileSystemWatcher.onDidChange()",
  "workspace.createFileSystemWatcher.onDidCreate()",
  "workspace.createFileSystemWatcher.onDidDelete()",
  "languages.onDidChangeDiagnostics(function)",
  "--- activated ---",
  "--- 52 subscriptions ---",
]
`;

exports[`activation order > in production, when the core has to be downloaded first 2`] = `
[
  "new(language-check-server)",
  "onRestart",
  "onFailure",
  "start",
  "sendRequest(initialize)",
  "sendRequest(getMetadata)",
  "stop",
]
`;

exports[`activation order > under the test host, with a local core build 1`] = `
[
  "--- activate ---",
  "window.createOutputChannel("Language Check")",
  "languages.createDiagnosticCollection("language-check")",
  "window.showInformationMessage("Welcome to Language Check! Open the Get Started walkthrough to learn the basics.", "Open Walkthrough")",
  "workspace.onDidOpenTextDocument(function)",
  "window.createOutputChannel("Language Check: Protobuf Trace")",
  "window.createTextEditorDecorationType(object)",
  "window.createTextEditorDecorationType(object)",
  "window.createTextEditorDecorationType(object)",
  "window.createTextEditorDecorationType(object)",
  "languages.createDiagnosticCollection("language-check-config")",
  "workspace.onDidChangeTextDocument(function)",
  "workspace.onDidOpenTextDocument(function)",
  "workspace.onDidSaveTextDocument(function)",
  "window.onDidChangeVisibleTextEditors(function)",
  "workspace.onDidCloseTextDocument(function)",
  "commands.registerCommand("language-check.configStatus", function)",
  "window.createStatusBarItem(number, number)",
  "window.createStatusBarItem(number, number)",
  "window.onDidChangeActiveTextEditor(function)",
  "languages.registerInlayHintsProvider([markdown,html,latex,forester,tinylang,rst,sweave,bibtex,org,typst,mdx,xhtml], object)",
  "languages.registerInlayHintsProvider([latex], object)",
  "languages.registerInlayHintsProvider([latex], object)",
  "languages.registerInlineCompletionItemProvider([markdown,html,latex,forester,tinylang,rst,sweave,bibtex,org,typst,mdx,xhtml], object)",
  "languages.registerCodeActionsProvider([markdown,html,latex,forester,tinylang,rst,sweave,bibtex,org,typst,mdx,xhtml], object)",
  "commands.registerCommand("language-check.downloadBinary", function)",
  "commands.registerCommand("language-check.toggleInlayHints", function)",
  "commands.registerCommand("language-check.toggleCheckTrigger", function)",
  "commands.registerCommand("language-check.managePlugins", function)",
  "commands.registerCommand("language-check.restartLanguageServer", function)",
  "commands.registerCommand("language-check.restartLTDocker", function)",
  "commands.registerCommand("language-check.ignoreDiagnostic", function)",
  "commands.registerCommand("language-check.ignoreSelection", function)",
  "commands.registerCommand("language-check.fixAllSpellingInFile", function)",
  "commands.registerCommand("language-check.fixAllSpellingInWorkspace", function)",
  "commands.registerCommand("language-check.toggleTrace", function)",
  "commands.registerCommand("language-check.showTrace", function)",
  "commands.registerCommand("language-check.switchCore", function)",
  "commands.registerCommand("language-check.installPack", function)",
  "commands.registerCommand("language-check.addToDictionary", function)",
  "commands.registerCommand("language-check.deactivateRule", function)",
  "commands.registerCommand("language-check.applyFix", function)",
  "commands.registerCommand("language-check.selectLanguage", function)",
  "commands.registerCommand("language-check.manageEngines", function)",
  "commands.registerCommand("language-check.skipLatexEnv", function)",
  "commands.registerCommand("language-check.hideLatexEnvHint", function)",
  "commands.registerCommand("language-check.skipLatexCommand", function)",
  "commands.registerCommand("language-check.checkDocument", function)",
  "commands.registerCommand("language-check.checkWorkspace", function)",
  "commands.registerCommand("language-check.openSpeedFix", function)",
  "commands.registerCommand("language-check.openInspector", function)",
  "window.onDidChangeActiveTextEditor(function)",
  "workspace.onDidOpenTextDocument(function)",
  "window.onDidChangeActiveTextEditor(function)",
  "workspace.onDidChangeTextDocument(function)",
  "workspace.onDidSaveTextDocument(function)",
  "workspace.onDidChangeConfiguration(function)",
  "workspace.createFileSystemWatcher("**/.languagecheck.{yaml,yml,json}")",
  "workspace.createFileSystemWatcher.onDidChange()",
  "workspace.createFileSystemWatcher.onDidCreate()",
  "workspace.createFileSystemWatcher.onDidDelete()",
  "--- first yield ---",
  "workspace.createFileSystemWatcher(RelativePattern(".langcheck/schemas/**/*"))",
  "workspace.createFileSystemWatcher.onDidChange()",
  "workspace.createFileSystemWatcher.onDidCreate()",
  "workspace.createFileSystemWatcher.onDidDelete()",
  "workspace.createFileSystemWatcher(RelativePattern(".languagecheck/dictionary.txt"))",
  "workspace.createFileSystemWatcher.onDidChange()",
  "workspace.createFileSystemWatcher.onDidCreate()",
  "workspace.createFileSystemWatcher.onDidDelete()",
  "languages.onDidChangeDiagnostics(function)",
  "--- activated ---",
  "--- 52 subscriptions ---",
]
`;

exports[`activation order > under the test host, with a local core build 2`] = `
[
  "new(language-check-server)",
  "onRestart",
  "onFailure",
  "start",
  "sendRequest(initialize)",
  "sendRequest(getMetadata)",
  "stop",
]
`;

exports[`activation order > under the test host, with no local core build 1`] = `
[
  "--- activate ---",
  "window.createOutputChannel("Language Check")",
  "languages.createDiagnosticCollection("language-check")",
  "window.showInformationMessage("Welcome to Language Check! Open the Get Started walkthrough to learn the basics.", "Open Walkthrough")",
  "workspace.onDidOpenTextDocument(function)",
  "window.createOutputChannel("Language Check: Protobuf Trace")",
  "window.createTextEditorDecorationType(object)",
  "window.createTextEditorDecorationType(object)",
  "window.createTextEditorDecorationType(object)",
  "window.createTextEditorDecorationType(object)",
  "languages.createDiagnosticCollection("language-check-config")",
  "workspace.onDidChangeTextDocument(function)",
  "workspace.onDidOpenTextDocument(function)",
  "workspace.onDidSaveTextDocument(function)",
  "window.onDidChangeVisibleTextEditors(function)",
  "workspace.onDidCloseTextDocument(function)",
  "commands.registerCommand("language-check.configStatus", function)",
  "window.showWarningMessage("Language Check: core binary not found. Build it with \`cargo build --release\` in rust-core/, or download a release.", "Download Release")",
  "window.createStatusBarItem(number, number)",
  "window.createStatusBarItem(number, number)",
  "window.onDidChangeActiveTextEditor(function)",
  "languages.registerInlayHintsProvider([markdown,html,latex,forester,tinylang,rst,sweave,bibtex,org,typst,mdx,xhtml], object)",
  "languages.registerInlayHintsProvider([latex], object)",
  "languages.registerInlayHintsProvider([latex], object)",
  "languages.registerInlineCompletionItemProvider([markdown,html,latex,forester,tinylang,rst,sweave,bibtex,org,typst,mdx,xhtml], object)",
  "languages.registerCodeActionsProvider([markdown,html,latex,forester,tinylang,rst,sweave,bibtex,org,typst,mdx,xhtml], object)",
  "commands.registerCommand("language-check.downloadBinary", function)",
  "commands.registerCommand("language-check.toggleInlayHints", function)",
  "commands.registerCommand("language-check.toggleCheckTrigger", function)",
  "commands.registerCommand("language-check.managePlugins", function)",
  "commands.registerCommand("language-check.restartLanguageServer", function)",
  "commands.registerCommand("language-check.restartLTDocker", function)",
  "commands.registerCommand("language-check.ignoreDiagnostic", function)",
  "commands.registerCommand("language-check.ignoreSelection", function)",
  "commands.registerCommand("language-check.fixAllSpellingInFile", function)",
  "commands.registerCommand("language-check.fixAllSpellingInWorkspace", function)",
  "commands.registerCommand("language-check.toggleTrace", function)",
  "commands.registerCommand("language-check.showTrace", function)",
  "commands.registerCommand("language-check.switchCore", function)",
  "commands.registerCommand("language-check.installPack", function)",
  "commands.registerCommand("language-check.addToDictionary", function)",
  "commands.registerCommand("language-check.deactivateRule", function)",
  "commands.registerCommand("language-check.applyFix", function)",
  "commands.registerCommand("language-check.selectLanguage", function)",
  "commands.registerCommand("language-check.manageEngines", function)",
  "commands.registerCommand("language-check.skipLatexEnv", function)",
  "commands.registerCommand("language-check.hideLatexEnvHint", function)",
  "commands.registerCommand("language-check.skipLatexCommand", function)",
  "commands.registerCommand("language-check.checkDocument", function)",
  "commands.registerCommand("language-check.checkWorkspace", function)",
  "commands.registerCommand("language-check.openSpeedFix", function)",
  "commands.registerCommand("language-check.openInspector", function)",
  "window.onDidChangeActiveTextEditor(function)",
  "workspace.onDidOpenTextDocument(function)",
  "window.onDidChangeActiveTextEditor(function)",
  "workspace.onDidChangeTextDocument(function)",
  "workspace.onDidSaveTextDocument(function)",
  "workspace.onDidChangeConfiguration(function)",
  "workspace.createFileSystemWatcher("**/.languagecheck.{yaml,yml,json}")",
  "workspace.createFileSystemWatcher.onDidChange()",
  "workspace.createFileSystemWatcher.onDidCreate()",
  "workspace.createFileSystemWatcher.onDidDelete()",
  "--- first yield ---",
  "workspace.createFileSystemWatcher(RelativePattern(".langcheck/schemas/**/*"))",
  "workspace.createFileSystemWatcher.onDidChange()",
  "workspace.createFileSystemWatcher.onDidCreate()",
  "workspace.createFileSystemWatcher.onDidDelete()",
  "workspace.createFileSystemWatcher(RelativePattern(".languagecheck/dictionary.txt"))",
  "workspace.createFileSystemWatcher.onDidChange()",
  "workspace.createFileSystemWatcher.onDidCreate()",
  "workspace.createFileSystemWatcher.onDidDelete()",
  "languages.onDidChangeDiagnostics(function)",
  "--- activated ---",
  "--- 52 subscriptions ---",
]
`;

exports[`activation order > under the test host, with no local core build 2`] = `[]`;
